--- a/index.html
+++ b/index.html
@@ -480,12 +480,189 @@
 
             <!--==================== SERVICES ====================-->
             <section class="services section" id="services">
-                
+                <h2 class="section__title">Services</h2>
+                <span class="section__subtitle">What I offer</span>
+                <div class="services__container container grid">
+                 <!--==================== SERVICES 1 ====================-->
+                 <div class="services__content">
+                     <div>
+                         <i class="uil uil-web-grid services__icon"></i>
+                         <h3 class="services__title">Ux/Ui <br> Designer</h3>
+                     </div>
+
+                     <span class="button button--flex button--small button-link services__button">
+                         View More
+                         <i class="uil uil-arrow-right button__icon"></i>
+                     </span>
+
+                     <div class="services__modal">
+                         <div class="services__modal-content">
+                             <h4 class="services__modal-title">Ui/Ux <br> Designer</h4>
+                             <i class="uil uil-times services__modal-close"></i>
+
+                             <ul class="services__modal-services grid">
+                                 <li class="services__modal-service">
+                                     <i class="uil uil-check-circle services__modal-icon"></i>
+                                     <p>I develop the user interface.</p>
+                                 </li>
+                                 <li class="services__modal-service">
+                                    <i class="uil uil-check-circle services__modal-icon"></i>
+                                    <p>Web page development.</p>
+                                </li>
+                                <li class="services__modal-service">
+                                    <i class="uil uil-check-circle services__modal-icon"></i>
+                                    <p>I create ux element interactions.</p>
+                                </li>
+                                <li class="services__modal-service">
+                                    <i class="uil uil-check-circle services__modal-icon"></i>
+                                    <p>I position your company brand.</p>
+                                </li>
+                             </ul>
+                         </div>
+                     </div>
+                 </div>
+
+                 <!--==================== SERVICES 2 ====================-->
+                 <div class="services__content">
+                    <div>
+                        <i class="uil uil-arrow services__icon"></i>
+                        <h3 class="services__title">Frontend <br> Developer</h3>
+                    </div>
+
+                    <span class="button button--flex button--small button-link services__button">
+                        View More
+                        <i class="uil uil-arrow-right button__icon"></i>
+                    </span>
+
+                    <div class="services__modal">
+                        <div class="services__modal-content">
+                            <h4 class="services__modal-title">Frontend <br> Developer</h4>
+                            <i class="uil uil-times services__modal-close"></i>
+
+                            <ul class="services__modal-services grid">
+                                <li class="services__modal-service">
+                                    <i class="uil uil-check-circle services__modal-icon"></i>
+                                    <p>I develop the user interface.</p>
+                                </li>
+                                <li class="services__modal-service">
+                                   <i class="uil uil-check-circle services__modal-icon"></i>
+                                   <p>Web page development.</p>
+                               </li>
+                               <li class="services__modal-service">
+                                   <i class="uil uil-check-circle services__modal-icon"></i>
+                                   <p>I create ux element interactions.</p>
+                               </li>
+                               <li class="services__modal-service">
+                                   <i class="uil uil-check-circle services__modal-icon"></i>
+                                   <p>I position your company brand.</p>
+                               </li>
+                            </ul>
+                        </div>
+                    </div>
+                 </div>
+
+                <!--==================== SERVICES 3 ====================-->
+                <div class="services__content">
+                    <div>
+                        <i class="uil uil-pen services__icon"></i>
+                        <h3 class="services__title">Branding <br> Designer</h3>
+                    </div>
+
+                    <span class="button button--flex button--small button-link services__button">
+                        View More
+                        <i class="uil uil-arrow-right button__icon"></i>
+                    </span>
+
+                    <div class="services__modal">
+                        <div class="services__modal-content">
+                            <h4 class="services__modal-title">Branding <br> Designer</h4>
+                            <i class="uil uil-times services__modal-close"></i>
+
+                            <ul class="services__modal-services grid">
+                                <li class="services__modal-service">
+                                    <i class="uil uil-check-circle services__modal-icon"></i>
+                                    <p>I develop the user interface.</p>
+                                </li>
+                                <li class="services__modal-service">
+                                   <i class="uil uil-check-circle services__modal-icon"></i>
+                                   <p>Web page development.</p>
+                               </li>
+                               <li class="services__modal-service">
+                                   <i class="uil uil-check-circle services__modal-icon"></i>
+                                   <p>I create ux element interactions.</p>
+                               </li>
+                               <li class="services__modal-service">
+                                   <i class="uil uil-check-circle services__modal-icon"></i>
+                                   <p>I position your company brand.</p>
+                               </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+                </div>
             </section>
 
             <!--==================== PORTFOLIO ====================-->
             <section class="portfolio section" id="portfolio">
-                
+                <h2 class="section__title">Portfolio</h2>
+                <span class="section__subtitle">Most recent work</span>
+
+                <div class="portfolio__container container swiper-container">
+                    <div class="swiper-wrapper">
+                        <!--==================== PORTFOLIO 1 ====================-->
+                        <div class="portfolio__content grid swiper-slide">
+                            <img src="assets/img/portfolio1.jpg" alt="" class="portfolio__img">
+
+                            <div class="portfolio__data">
+                                <h3 class="portfolio__title">Modern Website</h3>
+                                <p class="portfolio__description">Website adaptable to all devices, with ui components and animated interactions.</p>
+                                <a href="#" class="button button--flex button--small portfolio__button">
+                                    Demo 
+                                    <i class="uil uil-arrow-right button__icon"></i>
+                                </a>
+                            </div>
+                        </div>
+
+                         <!--==================== PORTFOLIO 2 ====================-->
+                         <div class="portfolio__content grid swiper-slide">
+                            <img src="assets/img/portfolio2.jpg" alt="" class="portfolio__img">
+
+                            <div class="portfolio__data">
+                                <h3 class="portfolio__title">Brand Designer</h3>
+                                <p class="portfolio__description">Website adaptable to all devices, with ui components and animated interactions.</p>
+                                <a href="#" class="button button--flex button--small portfolio__button">
+                                    Demo 
+                                    <i class="uil uil-arrow-right button__icon"></i>
+                                </a>
+                            </div>
+                        </div>
+
+                         <!--==================== PORTFOLIO 3 ====================-->
+                         <div class="portfolio__content grid swiper-slide">
+                            <img src="assets/img/portfolio3.jpg" alt="" class="portfolio__img">
+
+                            <div class="portfolio__data">
+                                <h3 class="portfolio__title">Online Store</h3>
+                                <p class="portfolio__description">Website adaptable to all devices, with ui components and animated interactions.</p>
+                                <a href="#" class="button button--flex button--small portfolio__button">
+                                    Demo 
+                                    <i class="uil uil-arrow-right button__icon"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Add Arrows -->
+                    <div class="swiper-button-next">
+                        <i class="uil uil-angle-right swiper-portfolio-icon"></i>
+                    </div>
+                    <div class="swiper-button-prev">
+                        <i class="uil uil-angle-left swiper-portfolio-icon"></i>
+                    </div>
+                    <!-- Add Pagination -->
+                    <div class="swiper-pagination"></div>
+                </div>
             </section>
 
             <!--==================== PROJECT IN MIND ====================-->
